# mock-openai

./: BENCHMARK_SCENARIOS.md  Cargo.toml  DESIGN.md  HTTP2.md  README.md  report.html
benches/: benchmark_endpoints.rs
src/: args.rs  endpoints.rs  lib.rs  main.rs  tls.rs  types.rs  utils.rs
