[package]
name = "mock-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
actix-rt = "2.11"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
lipsum = "0.9"
http = "1.2"
futures = "0.3"
bytes = "1.4"
anyhow = "1.0"
thiserror = "1.0"
